# RXNRECer

./: .bumpversion.cfg  .gitignore  CURSOR_SETUP.md  DEPLOYMENT_GUIDE.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  PYPI_RELEASE_GUIDE.md  README.md  REFACTOR.md  RELEASE_NOTES.md  SETUP_COMPLETE.md  data.msgpack  deploy.sh  environment_minimal.yml  environment_rxnrecer-release.yml  example_usage.py  graph.ipynb  install.sh  main.py  pyproject.toml  requirements-locked.txt  requirements.txt  run_prediction.py  rxnrecer.py  rxnrecer.yaml  setup.py  setup_scm_example.py  test.ipynb  test.py  test_basic.py  version.py  zhangdan.ipynb
.github/workflows/: release.yml  version-check.yml
baselines/: ecpred.slurm  s1_baseline_blast.ipynb  s1_baseline_blast_10_fold.ipynb  s2_baseline_ec_method.ipynb  s2_baseline_ec_method_10_fold.ipynb
case/: ecoli.ipynb
case/2018later/: 2018later_case.ipynb  RXNRECer4Case.ipynb  case_2018later_S2_时间评估.ipynb  集成评估.ipynb
case/ecoli/: ._ecoli_rxnrecer_relation_without_iml1515.xlsx  ._model_input_file_ecoli_RXNRECer_241017.xlsx  ._~$ecoli_rxnrecer_relation_without_iml1515.xlsx  ._~$model_input_file_ecoli_RXNRECer_241017.xlsx  case_ecoli_res.tsv  ecoli.ipynb  ecoli_case_ana_1126.ipynb  ecoli_case_ana_250519.ipynb  ecoli_case_function_ana_0610.ipynb  ecoli_case_new_function.ipynb  ecoli_rxnrecer_relation_without_iml1515.xlsx  gene_model_1515.xlsx  genes.feather  ~$ecoli_rxnrecer_relation_without_iml1515.xlsx
case/fusarium_venenatum/: brenda_ec_case.ipynb  brenda_ec_single_case.ipynb  expasy_ec_full_case.ipynb  fs.py  fusarium.ipynb  fusariumRMSD.ipynb
case/fusarium_venenatum/data/slurm/script/: submit_qgpu_a40.slurm  submit_qgpu_a800.slurm
case/fusarium_venenatum/data/slurm_script/: submit_qgpu_a800.slurm
case/fusarium_venenatum/res/deepec/: DeepEC_Result.txt
case/fusarium_venenatum/res/deepec/log_files/: 3digit_EC_prediction.txt  (+4 more)
case/llm/: case_rxnpicker.ipynb
case/noneEnzyme2Enzyme/: 2018later_case_none_to_enzyme.ipynb  2018previous_case_none_to_enzyme.ipynb
case/testsetCase/: case_test.ipynb  case_test_fold_2.ipynb
ckpt/: README.md
config/: conf.py  s3conf.py
data/: README.md
data/dict/: dict_id2rxn.json  dict_rxn2id.json
data/sample/: sample10.fasta
docs/: INSTALL.md  RELEASE_NOTES.md
docs/templates/: README_template.md
evaluation/: evTools.py  eva_direct.ipynb  eva_ec_methods_10_fold.ipynb  eva_ec_methods_10_fold_marco.ipynb  eva_ecmethods.ipynb  eva_ecmethods_10_fold.ipynb  eva_ensemble_prost2018.ipynb  eva_rxn_methods_10_fold.ipynb  eva_rxn_methods_10_fold_optimized.ipynb  eva_structural_methods_10_fold.ipynb  fig_ec_vs_direct.ipynb  test_break.py
examples/: basic_usage.py
figures/: ModleArtitech.ipynb  fig_ec_vs_direct_case2018later.ipynb  fig_同源性对比图.ipynb  script_figure_f2_case2018later_upset.ipynb  script_figure_f2_rxnrecer-s2集成.ipynb
methods/: CaclSimiProteinWithfoldNum.py  Mactive.py  MactivePrediction.py  s1_simi_protein.ipynb  s1_simi_protein_10_fold.ipynb  s1_simi_protein_10_fold.sh  s1_simi_protein_10_fold.slurm  s2_train_data_prep.ipynb  s3-1_structure_foldseek.slurm  s3_structure_protein_10_fold.ipynb  s4-1_simi_protein_10_fold.py  s4_simi_structure_protein_10_fold.ipynb  s5_methods_rxnrecer copy.ipynb  s5_methods_rxnrecer.ipynb  s6_methods_rxnrecerS2.ipynb
modules/: commonfunction.py  simi_caculator.py
modules/bigg/: bigg.ipynb
modules/embedding/: seqEmbedding.py  t5Embedding.py
modules/llm/: Chat.py  RXNRECerQa.py  prompt.py
modules/ml/: Mactive.py
modules/predict/: predRXN.py
modules/rxn/: Molecule.py  Reaction.py  fix_rhea_reactions.ipynb
modules/structure/: Tdi.py  embedProstT5_3di.py  embedding_3di.py  get_best_pdb.py  run_esmfold.py  sbatch_esmfold.ipynb
notebooks/: s1_simi_protein_10_fold.ipynb  s2_train_data_prep.ipynb  s4_simi_structure_protein_10_fold.ipynb
preprocessing/: get_esmfold_pdb.sh  get_esmfold_pdb.slurm  s1_prepare_task_dataset.ipynb  s2_statistics.ipynb  s3_prepare_task_dataset_structure.ipynb  s4_prepare_task_dataset_3di.ipynb
production/: Mactive.py  production.ipynb  production.py  s1_make_rxn_details_json.ipynb  sample10-ecoli-res.json  sample10-ecoli-res.tsv  sample10-ecoli.fasta
results/: README.md
results/cache/: .gitkeep
results/sample/: res_sample10.tsv  sample_output.json
rxnrecer/: __init__.py
rxnrecer/cli/: cache.py  download.py  format_utils.py  freese_every_layer.py  genmolsvg.py  predict.ipynb  predict.py  train.py
rxnrecer/config/: config.py  model_config.py  settings.py
rxnrecer/core/: legacy_predictor.py  predictor.py
rxnrecer/data/: ingestion.py
rxnrecer/data/dataset_preprocessing/: s1_prepare_task_dataset.ipynb  s2_statistics.ipynb  s3_prepare_task_dataset_structure.ipynb
rxnrecer/data/preprocessing/: dataset_preparer.py  embedding_generator.py  statistics.py  structure_processor.py
rxnrecer/data/sources/: rhea.py  uniprot.py
rxnrecer/lib/embedding/: esm_embedding.py  t5_embedding.py  unirep_embedding.py
rxnrecer/lib/llm/: chat.py  qa.py
rxnrecer/lib/ml/: mlcommon.py  mlpredict.py
rxnrecer/lib/model/: mactive.py
rxnrecer/lib/rxn/: Molecule.py  Reaction.py  build_rxn.ipynb  check_progress.py  middle_test.py  process_all_reactions.py  quick_test.py  test_fixed_reaction.py
rxnrecer/lib/smi/: simi_caculator.py
rxnrecer/models/: bgru_model.py  esm_embedding.py
rxnrecer/preprocessing/: s1_prepare_task_dataset.ipynb
rxnrecer/utils/: bio_utils.py  evaluation_utils.py  file_utils.py  format_utils.py  legacy_bio_utils.py  legacy_evaluation.py  rhea_utils.py  uniprot_utils.py
scripts/: build_and_release.py  get_esmfold_pdb.slurm  get_t53di_embedding.slurm  setup_environment.sh  setup_uv_gpu_env.sh  verify_data.py  version_manager.py
tests/: test_basic.py
tools/: bioFunctionLib.py  btools.py  commonfunction.py  ectool.py  evaluation.py  filetool.py  rheatool.py  s3tool.py  uniprottool.py
