[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rxnrecer"
dynamic = ["version"]
description = "Deep learning framework for predicting enzyme-catalyzed reactions from protein sequences"
readme = "README.md"
license = "MIT"
authors = [
    {name = "RXNRECer Team", email = "contact@rxnrecer.org"}
]
maintainers = [
    {name = "Zhenkun Shi", email = "zhenkun.shi@tib.cas.cn"}
]
keywords = ["bioinformatics", "enzyme", "reaction", "prediction", "deep learning", "protein"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "biopython>=1.79",
    "requests>=2.25.0",
    "tqdm>=4.62.0",
    "click>=8.0.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "boto3>=1.26.0",
    "feather-format>=0.4.1",
    "pyarrow>=10.0.0",
    "fair-esm>=2.0.0",
    "transformers>=4.20.0",
    "pandarallel>=1.6.0",
    "rdkit-pypi>=2022.9.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.15",
]

[project.urls]
Homepage = "https://github.com/kingstdio/RXNRECer"
Documentation = "https://github.com/kingstdio/RXNRECer#readme"
Repository = "https://github.com/kingstdio/RXNRECer.git"
Issues = "https://github.com/kingstdio/RXNRECer/issues"
PyPI = "https://pypi.org/project/rxnrecer/"

[project.scripts]
rxnrecer = "rxnrecer.cli.predict:main"
rxnrecer-download-data = "rxnrecer.cli.download:download_data"
rxnrecer-cache = "rxnrecer.cli.cache:cache"

[tool.setuptools.dynamic]
version = {attr = "rxnrecer.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["rxnrecer*"]
exclude = ["tests*", "docs*", "scripts*"]

[tool.setuptools.package-data]
rxnrecer = ["*.yaml", "*.yml", "*.json", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true